--- a/FSharpForTheCSharp/output/talk.html
+++ b/FSharpForTheCSharp/output/talk.html
@@ -101,12 +101,14 @@
 <ul>
 <li>Thanks Wikipedia</li>
 </ul></li>
-<li>Functional  like f(x) = x + 2</li>
+<li>Functional like f(x) = x + 2</li>
 <li>A given input will always have the same output</li>
 <li>f(x) is immutable - its definition is not going to change</li>
 </ul>
 
 </section>
+
+<section >
 
 <section >
 
@@ -122,7 +124,7 @@
 
 </section>
 
-<section >
+<section author="Jeremy Abbott" description="F# for the C# Dev" theme="night" title="Getting Functional w/ F#" transition="default">
 
 <h3>F#: 10,000 ft View</h3>
 
@@ -134,6 +136,34 @@
 <li>Statically typed</li>
 <li>Syntax derives from OCaml</li>
 </ul>
+
+</section>
+
+<section author="Jeremy Abbott" description="F# for the C# Dev" theme="night" title="Getting Functional w/ F#" transition="default">
+
+<h3>Why F#?</h3>
+
+<h4>From the F# Marketing Dept.</h4>
+
+<ul>
+<li>Default immutability limits unwanted side effects</li>
+<li>Type inference leads to more predictable code</li>
+<li>Terse syntax leads to cleaner, more modular code</li>
+</ul>
+
+</section>
+
+<section author="Jeremy Abbott" description="F# for the C# Dev" theme="night" title="Getting Functional w/ F#" transition="default">
+
+<h3>F# in the Wild</h3>
+
+<ul>
+<li>Canopy - Wrapper over selenium written in F# - F#rictionless web testing</li>
+<li>FAKE - F# Make - A DSL for build tasks</li>
+<li>Xamarin - Write cross-platform apps in F#!</li>
+</ul>
+
+</section>
 
 </section>
 
@@ -149,32 +179,6 @@
 <li>When you concatenate two strings you’re actually getting a new string.</li>
 <li>In C# readonly and const keywords provide immutable behavior</li>
 </ul></li>
-</ul>
-
-</section>
-
-<section >
-
-<h3>Why F#?</h3>
-
-<h4>From the F# Marketing Dept.</h4>
-
-<ul>
-<li>Default immutability limits unwanted side effects</li>
-<li>Type inference leads to more predictable code</li>
-<li>Terse syntax leads to cleaner, more modular code</li>
-</ul>
-
-</section>
-
-<section >
-
-<h3>F# in the Wild</h3>
-
-<ul>
-<li>Canopy - Wrapper over selenium written in F# - F#rictionless web testing</li>
-<li>FAKE - F# Make - A DSL for build tasks</li>
-<li>Xamarin - Write cross-platform apps in F#!</li>
 </ul>
 
 </section>
