Updated FsReveal and slides.

--- a/FSharpForTheCSharp/output/index.html
+++ b/FSharpForTheCSharp/output/index.html
@@ -37,12 +37,12 @@
 </head>
 <body>
     <div class="reveal">
-        <div class="tip" id="fs1">val a : int<br /><br />Full name: CDocument.a</div>
-<div class="tip" id="fs2">val factorial : x:int -&gt; int<br /><br />Full name: CDocument.factorial</div>
+        <div class="tip" id="fs1">val a : int<br /><br />Full name: index.a</div>
+<div class="tip" id="fs2">val factorial : x:int -&gt; int<br /><br />Full name: index.factorial</div>
 <div class="tip" id="fs3">val x : int</div>
 <div class="tip" id="fs4">Multiple items<br />module List<br /><br />from Microsoft.FSharp.Collections<br /><br />--------------------<br />type List&lt;&#39;T&gt; =<br />&#160;&#160;| ( [] )<br />&#160;&#160;| ( :: ) of Head: &#39;T * Tail: &#39;T list<br />&#160;&#160;interface IEnumerable<br />&#160;&#160;interface IEnumerable&lt;&#39;T&gt;<br />&#160;&#160;member Head : &#39;T<br />&#160;&#160;member IsEmpty : bool<br />&#160;&#160;member Item : index:int -&gt; &#39;T with get<br />&#160;&#160;member Length : int<br />&#160;&#160;member Tail : &#39;T list<br />&#160;&#160;static member Cons : head:&#39;T * tail:&#39;T list -&gt; &#39;T list<br />&#160;&#160;static member Empty : &#39;T list<br /><br />Full name: Microsoft.FSharp.Collections.List&lt;_&gt;</div>
 <div class="tip" id="fs5">val reduce : reduction:(&#39;T -&gt; &#39;T -&gt; &#39;T) -&gt; list:&#39;T list -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Collections.List.reduce</div>
-<div class="tip" id="fs6">val c : int<br /><br />Full name: CDocument.c</div>
+<div class="tip" id="fs6">val c : int<br /><br />Full name: index.c</div>
 
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
