--- a/FSharpForTheCSharp/output/sample.html
+++ b/FSharpForTheCSharp/output/sample.html
@@ -37,17 +37,17 @@
 </head>
 <body>
     <div class="reveal">
-        <div class="tip" id="fs1">val a : int<br /><br />Full name: C:\Document.a</div>
-<div class="tip" id="fs2">val factorial : x:int -&gt; int<br /><br />Full name: C:\Document.factorial</div>
+        <div class="tip" id="fs1">val a : int<br /><br />Full name: Sample.a</div>
+<div class="tip" id="fs2">val factorial : x:int -&gt; int<br /><br />Full name: Sample.factorial</div>
 <div class="tip" id="fs3">val x : int</div>
 <div class="tip" id="fs4">Multiple items<br />module List<br /><br />from Microsoft.FSharp.Collections<br /><br />--------------------<br />type List&lt;&#39;T&gt; =<br />&#160;&#160;| ( [] )<br />&#160;&#160;| ( :: ) of Head: &#39;T * Tail: &#39;T list<br />&#160;&#160;interface IEnumerable<br />&#160;&#160;interface IEnumerable&lt;&#39;T&gt;<br />&#160;&#160;member Head : &#39;T<br />&#160;&#160;member IsEmpty : bool<br />&#160;&#160;member Item : index:int -&gt; &#39;T with get<br />&#160;&#160;member Length : int<br />&#160;&#160;member Tail : &#39;T list<br />&#160;&#160;static member Cons : head:&#39;T * tail:&#39;T list -&gt; &#39;T list<br />&#160;&#160;static member Empty : &#39;T list<br /><br />Full name: Microsoft.FSharp.Collections.List&lt;_&gt;</div>
 <div class="tip" id="fs5">val reduce : reduction:(&#39;T -&gt; &#39;T -&gt; &#39;T) -&gt; list:&#39;T list -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Collections.List.reduce</div>
-<div class="tip" id="fs6">val c : int<br /><br />Full name: C:\Document.c</div>
+<div class="tip" id="fs6">val c : int<br /><br />Full name: Sample.c</div>
 <div class="tip" id="fs7">Multiple items<br />type MeasureAttribute =<br />&#160;&#160;inherit Attribute<br />&#160;&#160;new : unit -&gt; MeasureAttribute<br /><br />Full name: Microsoft.FSharp.Core.MeasureAttribute<br /><br />--------------------<br />new : unit -&gt; MeasureAttribute</div>
-<div class="tip" id="fs8">[&lt;Measure&gt;]<br />type sqft<br /><br />Full name: C:\Document.sqft</div>
-<div class="tip" id="fs9">[&lt;Measure&gt;]<br />type dollar<br /><br />Full name: C:\Document.dollar</div>
-<div class="tip" id="fs10">val sizes : int&lt;sqft&gt; []<br /><br />Full name: C:\Document.sizes</div>
-<div class="tip" id="fs11">val prices : int&lt;dollar&gt; []<br /><br />Full name: C:\Document.prices</div>
+<div class="tip" id="fs8">[&lt;Measure&gt;]<br />type sqft<br /><br />Full name: Sample.sqft</div>
+<div class="tip" id="fs9">[&lt;Measure&gt;]<br />type dollar<br /><br />Full name: Sample.dollar</div>
+<div class="tip" id="fs10">val sizes : int&lt;sqft&gt; []<br /><br />Full name: Sample.sizes</div>
+<div class="tip" id="fs11">val prices : int&lt;dollar&gt; []<br /><br />Full name: Sample.prices</div>
 
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
@@ -114,7 +114,7 @@
 
 <p><code>c</code> is evaluated for you</p>
 
-<table class="pre"><tr><td><pre><code>No value has been returned</code></pre></td></tr></table>
+<table class="pre"><tr><td><pre><code>120</code></pre></td></tr></table>
 
 </section>
 
@@ -141,7 +141,7 @@
 
 <h4><code>prices.[0]/sizes.[0]</code></h4>
 
-<table class="pre"><tr><td><pre><code>No value has been returned</code></pre></td></tr></table>
+<table class="pre"><tr><td><pre><code>31</code></pre></td></tr></table>
 
 </section>
 
