--- a/FSharpForTheCSharp/output/index.html
+++ b/FSharpForTheCSharp/output/index.html
@@ -199,6 +199,7 @@
 <li>Even if that input/output is nothing</li>
 </ul></li>
 <li>Whitespace matters (think Python)</li>
+<li>File Order Matters</li>
 </ul>
 
 </section>
@@ -214,6 +215,12 @@
 </ul>
 
 </section>
+
+</section>
+
+<section >
+
+<p><img src="images/FSharpAllTheThings.jpg" alt="FsReveal" /></p>
 
 </section>
 
