Fix some typos.

--- a/FSharpForTheCSharp/output/index.html
+++ b/FSharpForTheCSharp/output/index.html
@@ -194,7 +194,7 @@
 <ul>
 <li>Even if that something is nothing</li>
 </ul></li>
-<li>Functions always accept an input and return an input
+<li>Functions always accept an input and ouputs something
 <ul>
 <li>Even if that input/output is nothing</li>
 </ul></li>
@@ -381,7 +381,7 @@ y <- 3<br/>
 
 <section author="Jeremy Abbott" description="Idiomatic approach to F# for OO programmers." theme="moon" title="Currying in a Hurry" transition="default">
 
-<h3>Values, Let and Binding</h3>
+<h3>Bindings and Values</h3>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
