Update resource links

--- a/FSharpForTheCSharp/output/index.html
+++ b/FSharpForTheCSharp/output/index.html
@@ -996,16 +996,17 @@ y <- 3<br/>
 <h3>Resources</h3>
 
 <ul>
-<li>F# for Fun and Profit: <a href="http://fsharpforfunandprofit.com/">http://fsharpforfunandprofit.com/</a></li>
-<li>F# Foundation: <a href="http://fsharp.org/">http://fsharp.org/</a>
+<li><a href="http://fsharpforfunandprofit.com/">F# for Fun and Profit</a></li>
+<li><a href="http://fsharp.org/">F# Foundation</a>
 <ul>
 <li>Become a member!</li>
 </ul></li>
-<li>F# on Slack: <a href="http://fsharp.slack.com">http://fsharp.slack.com</a></li>
-<li>#FSharp on Twitter</li>
-<li>The Book of F# by Dave Fancher: <a href="https://www.nostarch.com/fsharp">https://www.nostarch.com/fsharp</a></li>
-<li>Presentation Slides: <a href="http://tinyurl.com/curryingfsharpslides">http://tinyurl.com/curryingfsharpslides</a></li>
-<li>Code Samples: <a href="http://tinyurl.com/curryingfsharp">http://tinyurl.com/curryingfsharp</a></li>
+<li><a href="http://fsharp.slack.com">F# on Slack</a></li>
+<li><a href="https://twitter.com/search?f=tweets&amp;vertical=default&amp;q=%23fsharp&amp;src=typd">#FSharp on Twitter</a></li>
+<li><a href="https://www.nostarch.com/fsharp">The Book of F# by Dave Fancher</a></li>
+<li><a href="http://tinyurl.com/curryingfsharpslides">Presentation Slides</a></li>
+<li><a href="http://tinyurl.com/curryingfsharp">Code Samples</a></li>
+<li><a href="https://github.com/fsprojects/FsReveal">Slides created with FSReveal</a></li>
 </ul>
 
 </section>
